appId: host.exp.exponent
---
- tapOn:
    text: "votre@email.com"
- inputText: "marie@jjsimex.com"
- hideKeyboard
- tapOn:
    text: "••••••••"
- inputText: "admin123"
- hideKeyboard
- tapOn: "Se connecter"
- waitForAnimationToEnd
